samples/_failures_safe/1761073447_2fbcb2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef0001d4.c: In function ‘main’:
./samples/SAFE/__tmp_ef0001d4.c:151:5: error: ‘init’ undeclared (first use in this function); did you mean ‘int’?
  151 |     init
      |     ^~~~
      |     int
./samples/SAFE/__tmp_ef0001d4.c:151:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ef0001d4.c:151:9: error: expected ‘;’ at end of input
  151 |     init
      |         ^
      |         ;
./samples/SAFE/__tmp_ef0001d4.c:151:5: error: expected declaration or statement at end of input
  151 |     init
      |     ^~~~
